[package]
name = "jemerje"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version="0.14.2", default-features=false, features=["bevy_audio", "bevy_render", "x11", "vorbis", "png"]}
bevy_mod_picking = {version="0.20.1", default-features=false, features=["backend_sprite"]}
bevy_tween = "0.6.0"
rand = "0.8.5"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.release]
# Reduces the binary size
lto = 'fat'
codegen-units = 1
panic = 'abort'
strip = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
dyn = ["bevy/dynamic_linking"]
live = ["bevy/file_watcher"]
